【备份】留存能编译通过的版本，开始解决NMAKE报错问题

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -480,11 +480,11 @@ ctk_lib_option(Core
                "Build the Core library" ON)
 
 ctk_lib_option(PluginFramework
-               "Build the Plugin Framework" OFF
+               "Build the Plugin Framework" ON
                CTK_ENABLE_PluginFramework)
 
 ctk_lib_option(Widgets
-               "Build the Widgets library" OFF
+               "Build the Widgets library" ON
                CTK_ENABLE_Widgets OR (CTK_ENABLE_DICOMApplicationHosting AND CTK_BUILD_EXAMPLES) OR CTK_USE_QTTESTING)
 
 ctk_lib_option(DICOM/Core
@@ -668,7 +668,7 @@ if(CTK_QT_VERSION VERSION_LESS "5")
 endif()
 
 foreach(_plugin ${plugin_list})
-  ctk_plugin_option(${_plugin} "Build the ${_plugin} plugin." OFF)
+  ctk_plugin_option(${_plugin} "Build the ${_plugin} plugin." ON)
 endforeach()
 
 # Plug-ins related to the PluginGenerator application
